# MOOD

./: .flake8  MANIFEST.in  Pipfile  README.md  dodo.py  pyproject.toml
docs/source/: API.rst  conf.py  index.rst
locale/ru_RU.UTF-8/LC_MESSAGES/: mood.po
mood/client/: __main__.py  client.py
mood/common/: __init__.py
mood/server/: __main__.py  server.py
tests/: test_client.py  test_server.py
